# qoqo_aqt

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  README.md  Tutorial_qoqo.md  Tutorial_roqoqo.md  deny.toml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  requirements.doctree
.github/workflows/: build_and_deploy.yml  ci_tests.yml  hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-rust-pyo3.yml  hqs-ci-test-rust-pyo3.yml  manual-check-if-token.yml  publish_documentation.yml
_sources/: requirements.txt
_static/: documentation_options.js
html/: genindex.html  index.html  requirements.html
html/.doctrees/: environment.pickle  index.doctree  modules.doctree  requirements.doctree
html/_sources/: modules.rst.txt  requirements.txt
qoqo_aqt/: Cargo.toml  README.md  build.rs  pyproject.toml
qoqo_aqt/docs/: Makefile  conf.py  index.rst  modules.rst  requirements.txt
qoqo_aqt/examples/: reproducing_API_example.py  tutorial_example.py
qoqo_aqt/python_tests/: test_backend.py
qoqo_aqt/qoqo_aqt/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  PYTHON_LICENSE  __init__.py
qoqo_aqt/src/: backend.rs  devices.rs  lib.rs
qoqo_aqt/src/devices/: aqt_device.rs  mod.rs  noisy_simulator_device.rs  simulator_device.rs
qoqo_aqt/tests/integration/: main.rs
qoqo_aqt/tests/integration/backend/: mod.rs
qoqo_aqt/tests/integration/devices/: mod.rs
roqoqo-aqt/: Cargo.toml  README.md
roqoqo-aqt/examples/tutorial_example/: Cargo.toml
roqoqo-aqt/examples/tutorial_example/src/: main.rs
roqoqo-aqt/src/: backend.rs  devices.rs  interface.rs  lib.rs
roqoqo-aqt/tests/integration/: backend.rs  devices.rs  interface.rs  main.rs  mocking.rs
