[package]
name = "qoqo-aqt"
version = "0.5.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_aqt"
documentation = "https://docs.rs/qoqo_aqt/"
repository = "https://github.com/HQSquantumsimulations/qoqo_aqt"
description = "AQT backend for qoqo quantum computing toolkit"
include = ["src*", "qoqo_aqt", "LICENSE", "pyproject.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_aqt"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.16"
features = ["num-complex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qoqo_calculator = {version="0.8"}

qoqo_calculator_pyo3 = {version="0.8", default-features=false}

qoqo = {version="1.0.0-alpha.5", default-features=false}
roqoqo = {version="1.0.0-alpha.5"}

roqoqo-aqt = {version="0.5", path="../roqoqo-aqt"}
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "2.2.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy", "qoqo>=1.0.0-a5", "qoqo_calculator_pyo3>=0.8.0"]
maintainer = "HQS Quantum Simulations GmbH"
maintainer-email = "info@quantumsimulations.de"
requires-python = ">=3.7"
