[package]
name = "qoqo-aqt"
version = "0.6.6"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
homepage = "https://github.com/HQSquantumsimulations/qoqo_aqt"
repository = "https://github.com/HQSquantumsimulations/qoqo_aqt"
documentation = "https://docs.rs/qoqo_aqt/"
readme = "README.md"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
description = "AQT backend for qoqo quantum computing toolkit"
include = ["src*", "qoqo_aqt", "LICENSE", "pyproject.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_aqt"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.20"
features = ["num-complex"]

[dependencies]
roqoqo-aqt = {version="0.6", path="../roqoqo-aqt"}

qoqo_calculator = {version="1.1"}
qoqo_calculator_pyo3 = {version="1.1", default-features=false}
qoqo = {version="1.4", default-features=false}
roqoqo = {version="1.4"}

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.0"

[build-dependencies]
pyo3-build-config = "0.20"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.docs.rs]
no-default-features = true
