[project]
name = "qoqo_aqt"
version = "0.6.5"
dependencies = [
  "numpy",
  "qoqo_calculator_pyo3>=1.1",
  "qoqo>=1.5",
]

license = {text="Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause"}
maintainers = [{name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de"}]
requires-python = ">=3.7"

[project.optional-dependencies]
docs = [
    "sphinx >= 2.1",
    "nbsphinx",
    "pygments",
    "recommonmark",
    "myst_parser",
    "sphinx_rtd_theme",
    "tomli"
]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
skip-auditwheel = false
strip = true
profile = "release"

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 99  # same as black
target-version = "py39"
show-fixes = true
show-source = true
# activate the following checks
select = [
    "A",  # builtins
    "ANN",  # annotations
    "ARG",  # unused arguments
    "B",  # bugbear
    "C",  # comprehensions
    "C90",  # mccabe complexity
    "D",  # pydocstyle
    "E",  # pycodestyle
    "ERA",  # remove commented out code
    "F",  # pyflakes
    "NPY",  # numpy
    "PL",  # pylint
    "RUF",  # ruff
    "S",  # bandit
    "TCH",  # type checking
    "W",  # Warnings
]
# ignore specific violations
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN401",
    "D400",
    "D401",
    # "S403",  # not implemented in ruff (yet?!)
    # "S404",  # not implemented in ruff (yet?!)
    "PLR",
    "S301",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT",
    "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI",
    "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]
unfixable = []
# exclude the following patterns from linting
exclude = [
    ".git",
    "__pycache__",
    "doc/conf.py",
    "old",
    "build",
    "dist",
    "test_*"
]

[tool.ruff.mccabe]
max-complexity = 20  # 5 higher than sonarqube

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]