[package]
name = "roqoqo-aqt"
version = "0.4.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_aqt"
homepage = "https://github.com/HQSquantumsimulations/qoqo_aqt"
documentation = "https://docs.rs/qoqo_aqt/"
description = "AQT interface for roqoqo rust quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_aqt"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="0.10", features=["serialize"]}
qoqo_calculator = { version="0.6"}
reqwest = {version="0.11", features = ["json", "blocking"]}
serde = { version = "1.0", features = ["derive"]}
roqoqo-test = {version="0.10"}
serde_json = "1.0"
serde_urlencoded = "0.7"
test-case = "1.1"
