[package]
name = "roqoqo-aqt"
version = "0.8.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
rust-version = "1.56"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo_aqt"
repository = "https://github.com/HQSquantumsimulations/qoqo_aqt"
documentation = "https://docs.rs/qoqo_aqt/"
readme = "../README.md"
description = "AQT interface for roqoqo rust quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_aqt"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = { version = "~1.15", features = ["serialize"] }
qoqo_calculator = { version = "~1.2" }

reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "native-tls-vendored",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
test-case = "3.0"

[dev-dependencies]
roqoqo-test = { version = "~1.15" }
wiremock = { version = "~0.6"}
tokio = { version = "1", features = ["full"] }